# Pokemon-Kaggle

./: .gitignore  Dockerfile  deck.csv  pyproject.toml
benchmarks/: RESULTS-featurizer.md  RESULTS-gpu.md  RESULTS-league-smoke.md  RESULTS-local.md  RESULTS-train-smoke.md  bench_featurizer.py  bench_memory.py  bench_scaling.py  bench_search.py  bench_stepcost.py  bench_structure.py  common.py  smoke_test.py  spike_gpu.py  spike_visualize_data.py
decks/: README.md
docs/: phase2-run.md  phase3-run.md  phase5-run.md
ptcg/: action.py  actors.py  cards.py  clock.py  decklists.py  decks.py  determinize.py  ei.py  engine.py  featurize.py  league.py  mcts.py  model.py  ppo.py  replay.py  rollout.py  selfplay_search.py  simsearch.py  tracker.py  trainloop.py
scripts/: audit_value_phase.py  build_decks.py  cloud_setup.sh  deck_roundrobin.py  ei_loop.py  eval_search.py  extract_policy.py  extract_tables.py  freeze_champ.py  gate_ei.py  gen_ei.py  make_submission.py  plot_run.py  test_submission.py  train.py  train_ei.py
submission_src/: README.md  deck.csv  main.py
tests/: conftest.py  test_action.py  test_actors.py  test_cards.py  test_clock.py  test_decks.py  test_determinize.py  test_ei.py  test_ei_loop.py  test_engine.py  test_eval.py  test_featurize.py  test_integration.py  test_league.py  test_league_eval.py  test_league_rollout.py  test_league_train_integration.py  test_league_worker.py  test_learner.py  test_mcts.py  test_model.py  test_options.py  test_portfolio.py  test_ppo_multideck.py  test_ppo_smoke.py  test_ppo_units.py  test_privileged.py  test_replay.py  (+7 more)
(+20 files in other folders)
